demos/ingress/k8s/ingress.route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingress-demo
  labels:
    app: ingress-demo
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`ingress-demo.fakku-dev.net`)
      services:
        - kind: Service
          name: ingress-demo
          port: 80
